--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
       WORDPRESS_DB_PASSWORD: root
       WORDPRESS_TABLE_PREFIX: wp_
       WORDPRESS_DEBUG: true
+      WORDPRESS_LOCALE: ja_JP
+      WORDPRESS_ADMIN_USER: admin
+      WORDPRESS_ADMIN_PASSWORD: password
+      WORDPRESS_ADMIN_EMAIL: dev@example.com
 
   mysql:
     container_name: vite-wp-db
