--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 
 services:
-  wordpress:
+  wp:
     container_name: vite-wp-web
-    image: wordpress:latest
+    build: ./docker/wp
     depends_on:
       - mysql
     ports:
@@ -11,6 +11,7 @@ services:
     working_dir: /var/www/html/
     volumes:
       - ./dist:/var/www/html
+      - ./shell/wp-install.sh:/tmp/wp-install.sh
     environment:
       WORDPRESS_DB_HOST: mysql
       WORDPRESS_DB_NAME: localdb
@@ -18,10 +19,6 @@ services:
       WORDPRESS_DB_PASSWORD: root
       WORDPRESS_TABLE_PREFIX: wp_
       WORDPRESS_DEBUG: true
-      WORDPRESS_LOCALE: ja_JP
-      WORDPRESS_ADMIN_USER: admin
-      WORDPRESS_ADMIN_PASSWORD: password
-      WORDPRESS_ADMIN_EMAIL: dev@example.com
 
   mysql:
     container_name: vite-wp-db
