--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     image: mysql:latest
     volumes:
       - mysql:/var/lib/mysql
-      - ./docker/mysql:/docker-entrypoint-initdb.d
+      # - ./docker/mysql:/docker-entrypoint-initdb.d
     environment:
       MYSQL_DATABASE: localdb
       MYSQL_ROOT_PASSWORD: root
