--- a/package.json
+++ b/package.json
@@ -6,37 +6,57 @@
   "scripts": {
     "dev": "concurrently --raw \"node task/clean.mjs\" \"vite\"",
     "build": "vite build",
-    "minify-image": "node task/minifyImage.mjs",
+    "lint:eslint": "eslint \"./src/**/*.js\" --fix",
+    "lint:stylelint": "stylelint \"./src/**/*.scss\" --fix",
+    "optimize-images": "node task/optimize-images.mjs",
     "docker:init": "docker compose up -d --build",
     "docker:start": "docker compose up -d",
     "docker:stop": "docker stop $(docker ps -q) ",
-    "wpdb-export": "bash shell/wpdb-export.sh",
-    "wpdb-import": "bash shell/wpdb-import.sh"
+    "shell:setup-wp": "docker exec -it vite-wordpress-web /bin/bash -c \"/tmp/setup-wp.sh\"",
+    "shell:export-wp-db": "bash shell/export-wp-db.sh",
+    "shell:import-wp-db": "bash shell/import-wp-db.sh"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
+    "autoprefixer": "10.4.20",
+    "chokidar": "4.0.1",
+    "concurrently": "^9.1.0",
     "cross-env": "^7.0.3",
-    "css-declaration-sorter": "^7.1.1",
-    "imagemin": "^8.0.1",
+    "css-declaration-sorter": "^7.2.0",
+    "eslint": "9.16.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "glob": "11.0.0",
+    "globals": "15.13.0",
+    "imagemin": "^9.0.0",
     "imagemin-gifsicle": "^7.0.0",
-    "imagemin-keep-folder": "^5.3.2",
     "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-pngquant": "^9.0.2",
-    "imagemin-svgo": "^10.0.1",
-    "postcss": "^8.4.36",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
+    "postcss": "^8.4.49",
     "postcss-sort-media-queries": "^5.2.0",
-    "prettier": "^3.2.5",
-    "rimraf": "5.0.5",
-    "sass": "^1.71.1",
-    "terser": "^5.27.0",
-    "vite": "5.2.10",
-    "vite-plugin-live-reload": "^3.0.3",
-    "vite-plugin-sass-glob-import": "^3.0.2"
+    "prettier": "^3.4.2",
+    "rimraf": "6.0.1",
+    "sass": "^1.82.0",
+    "stylelint": "16.11.0",
+    "stylelint-config-html": "1.1.0",
+    "stylelint-config-recess-order": "5.1.1",
+    "stylelint-config-recommended-scss": "14.1.0",
+    "stylelint-config-standard": "36.0.1",
+    "stylelint-declaration-block-no-ignored-properties": "2.8.0",
+    "stylelint-plugin-logical-css": "1.2.1",
+    "stylelint-scss": "6.10.0",
+    "terser": "^5.36.0",
+    "vite": "6.0.2",
+    "vite-plugin-live-reload": "^3.0.4",
+    "vite-plugin-sass-glob-import": "^4.1.0"
   },
   "dependencies": {
-    "@barba/core": "^2.9.7",
-    "@barba/prefetch": "^2.1.10",
     "gsap": "^3.12.5",
-    "ua-parser-js": "^1.0.37"
+    "ua-parser-js": "^2.0.0"
+  },
+  "volta": {
+    "node": "20.17.0",
+    "pnpm": "9.12.3"
   }
 }
