--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "node task/clean.mjs && vite",
-    "build": "vite build",
+    "dev": "node task/clean.mjs && npm run optimize-images:watch && vite",
+    "build": "npm run optimize-images:no-watch && vite build",
     "preview": "vite preview",
+    "optimize-images:watch": "node task/optimize-images.mjs",
+    "optimize-images:no-watch": "node task/optimize-images.mjs --no-watch",
     "lint:eslint": "eslint \"./src/**/*.js\" --fix",
     "lint:stylelint": "stylelint \"./src/**/*.scss\" --fix",
-    "optimize-images": "node task/optimize-images.mjs",
     "docker:init": "docker compose up -d --build",
     "docker:start": "docker compose up -d",
     "docker:stop": "docker stop $(docker ps -q) ",
@@ -28,7 +29,6 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-unused-imports": "4.1.4",
-    "glob": "11.0.0",
     "globals": "15.13.0",
     "imagemin": "^9.0.0",
     "imagemin-gifsicle": "^7.0.0",
