--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   mysql:
     container_name: vite-wordpress-db
     platform: linux/x86_64
-    image: mariadb:latest
+    image: mysql:latest
     volumes:
       - mysql:/var/lib/mysql
       - ./docker/mysql:/docker-entrypoint-initdb.d
