--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "concurrently \"npm run clean\" \"npm run optimize-images:watch\" \"vite\"",
-    "build": "npm run optimize-images:no-watch && vite build",
+    "dev": "concurrently \"npm run task:clean\" \"npm run task:optimize-images:watch\" \"vite\"",
+    "build": "npm run task:optimize-images:no-watch && vite build",
     "preview": "vite preview",
-    "clean": "node task/clean.mjs",
-    "optimize-images:watch": "node task/optimize-images.mjs",
-    "optimize-images:no-watch": "node task/optimize-images.mjs --no-watch",
-    "format": "prettier --write ./src",
     "lint:eslint": "eslint \"./src/**/*.js\" --fix",
     "lint:stylelint": "stylelint \"./src/**/*.scss\" --fix",
     "docker:init": "docker compose up -d --build",
     "docker:start": "docker compose up -d",
     "docker:stop": "docker stop $(docker ps -q) ",
     "docker:delete": "docker compose down -v",
-    "shell:setup-wp": "docker exec -it vite-wordpress-web /bin/bash -c \"/tmp/setup-wp.sh\"",
-    "shell:export-wp-db": "bash shell/export-wp-db.sh",
-    "shell:import-wp-db": "bash shell/import-wp-db.sh",
-    "zip-theme": "cd dist/wp-content/themes/my-theme && zip -r ../../../../my-theme.zip ./*"
+    "task:format": "prettier --write ./src",
+    "task:clean": "node task/clean.mjs",
+    "task:optimize-images:watch": "node task/optimize-images.mjs",
+    "task:optimize-images:no-watch": "node task/optimize-images.mjs --no-watch",
+    "task:setup-wp": "docker exec -it vite-wordpress-web /bin/bash -c \"/tmp/setup-wp.sh\"",
+    "task:export-wp-db": "bash task/export-wp-db.sh",
+    "task:import-wp-db": "bash task/import-wp-db.sh",
+    "task:zip-theme": "cd dist/wp-content/themes/my-theme && zip -r ../../../../my-theme.zip ./*"
   },
   "devDependencies": {
     "autoprefixer": "10.4.20",
